syntax = "proto3";

package admin;
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service AdminService {
    rpc RequestStop(google.protobuf.Empty) returns (google.protobuf.Empty);

    rpc CreateNode(Node) returns (google.protobuf.Empty);
    rpc DeleteNode(google.protobuf.StringValue) returns (google.protobuf.Empty);
    rpc GetNode(google.protobuf.StringValue) returns (Node);
    rpc GetNodes(google.protobuf.Empty) returns (NodeList);

    rpc CreateGroup(Group) returns (google.protobuf.Empty);
    rpc DeleteGroup(google.protobuf.StringValue) returns (google.protobuf.Empty);
    rpc GetGroup(google.protobuf.StringValue) returns (Group);
    rpc GetGroups(google.protobuf.Empty) returns (GroupList);
}

message NodeList {
    repeated string nodes = 1;
}

message Node {
    string name = 1;
    string driver = 2;

    // Capabilities
    optional uint32 memory = 3;
    optional uint32 maxAllocations = 5;
    optional string subNode = 6;
}

message GroupList {
    repeated string groups = 1;
}

message Group {
    string name = 1;
    repeated string nodes = 2;
    Scaling scaling = 3;
    Resources resources = 4;
    Deployment deployment = 5;

    message Scaling {
        uint32 minimum = 1;
        uint32 maximum = 2;
        int32 priority = 3;
    }

    message Resources {
        uint32 memory = 1;
        uint32 swap = 2;
        uint32 cpu = 3;
        uint32 io = 4;
        uint32 disk = 5;
        uint32 addresses = 6;
    }

    message Deployment {
        string image = 1;
        repeated KeyValue settings = 2;
        repeated KeyValue environment = 3;
        optional Retention diskRetention = 4;

        message KeyValue {
            string key = 1;
            string value = 2;
        }

        enum Retention {
            TEMPORARY = 0;
            PERMANEMT = 1;
        } 
    }
}